--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 
 venv/
 __pycache__/*
-src/__pycache__/*
+
+resources/*
+
+
+#git ignore for all __pycache__ files
+__pycache__/*
+*/__pycache__/*
